--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ p {
 }
 
 .header {
-    background-image: url('https://cdn.wallpaper.com/main/styles/responsive_1460w_scale/s3/sunlight-cliff-rt-roadtrip-2021-5138-1800x1200.jpg?itok=0o1I5MHx');
+    background-image: url('images/van1.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
