--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ p {
 }
 
 .header {
-    background-image: url('images/van1.jpg');
+    background: url('images/van1.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
