--- a/main.css
+++ b/main.css
@@ -44,6 +44,8 @@ p {
     background-size: cover;
     background-position: center;
     position: relative;
+    width:100%;
+    height:100%;	
     
     
     
