--- a/main.css
+++ b/main.css
@@ -11,12 +11,12 @@ body {
     
     
 }
-.navigation-bar {
+/*.navigation-bar {
     background-color: purple;
     display: flex;
     justify-content: flex-end;
     
-}
+}*/
 
 
 p {
@@ -40,10 +40,12 @@ p {
 }
 
 .header {
-    background-image: url('images/van1.jpg');
+    background/*-image*/: url('images/van1.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
+    height: 100%;
+    width:100%;
     
     
     
