--- a/main.css
+++ b/main.css
@@ -40,7 +40,7 @@ p {
 }
 
 .header {
-    background/*-image*/: url('images/van2.jpg');
+    background/*-image*/: url('https://www.byri.net/wp-content/uploads/2021/11/Hymer-Free-600-Campus-a-campervan-with-a-pop-up-roof.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
