--- a/main.css
+++ b/main.css
@@ -2,7 +2,6 @@ body {
     padding: 0;
     margin: 0;
     background: #011518;
-
 }
 .navbar {
     background: #011518;            
@@ -39,16 +38,15 @@ p {
     
 }
 
-.header {
-    background/*-image*/: url('.images/van2.jpg');
+
+
+.container-fluid {
+    background: url('./images/van2.jpg')no-repeat 0 0;; 
     background-size: cover;
     background-position: center;
     position: relative;
     height: 100%;
-    width:100%;
-    
-    
-    
+    width:100% !important;
 }
 
 .overlay {
