--- a/main.css
+++ b/main.css
@@ -41,29 +41,30 @@ p {
 
 
 .container-fluid {
-    background: url('./images/van2.jpg')no-repeat 0 0;; 
+    /*background: url('./images/van2.jpg')no-repeat 0 0;;*/
+    background: linear-gradient(to top, #b3b3b4ba, #3e3e3fcc), url('./images/van2.jpg') no-repeat 0 0;;
     background-size: cover;
     background-position: center;
     position: relative;
-    height: 100%;
+    height: 50%;
     width:100% !important;
+   
 }
 
 .overlay {
-    position: absolute;
-    min-height: 100%;
+    position:absolute;
+    max-height: 40%;
     min-width: 100%;
     left: 0;
     top: 0;
-    margin-top: 2.95%; 
-    background: rgba(0, 0, 0, 0.6);
+    
 }
 
 .description {
 	left: 50%;
 	position: absolute;
-	top: 45%;
-	transform: translate(-50%, -55%);
+	top: 50%;
+	transform: translate(-50%, -50%);
 	text-align: center;
 }
 .description h1 {
